fix: move --add-opens from command line to MANIFEST.MF #1367